--- a/gitlib-libgit2/gitlib-libgit2.cabal
+++ b/gitlib-libgit2/gitlib-libgit2.cabal
@@ -1,5 +1,5 @@
 Name:                gitlib-libgit2
-Version:       3.1.1
+Version:             3.1.1.1
 Synopsis:            Libgit2 backend for gitlib
 License-file:        LICENSE
 License:             MIT
@@ -39,7 +39,7 @@ Library
     build-depends:
           base                 >= 3 && < 5
         , gitlib               >= 3.1.1
-        , hlibgit2             >= 0.18.0.11
+        , hlibgit2             == 0.18.0.15.1
         , bytestring           >= 0.9.2.1
         , conduit              >= 1.1.0
         , conduit-combinators  >= 1
