--- a/gitlib-libgit2/gitlib-libgit2.cabal
+++ b/gitlib-libgit2/gitlib-libgit2.cabal
@@ -38,7 +38,7 @@ Library
     ghc-options: -Wall
     build-depends:
           base                 >= 3 && < 5
-        , gitlib               >= 3.1.1
+        , gitlib               == 3.1.1.1
         , hlibgit2             == 0.18.0.15.1
         , bytestring           >= 0.9.2.1
         , conduit              >= 1.1.0
