Get rid of custom Setup.hs files
They cause trouble for cabal v2-build.

This partially reverts commit 76d8be594abf1341561ed212736c5e28dd940708
and commit bd26e038aca158e19af32340ec8a58bc7b13dda3.
("Make git a test dependency of gitlib-cmdline."
and "Make git a test dependency of hlibgit2.")

The downside of this change is that if git is missing it will no
longer be flagged by cabal.

(cherry picked from commit 5fc31eff3c45a7ca8aa9aa9ab46ab17a4ddbe927)

--- a/hlibgit2/hlibgit2.cabal
+++ b/hlibgit2/hlibgit2.cabal
@@ -6,7 +6,7 @@ License-file:        LICENSE
 License:             MIT
 Author:              John Wiegley, Sakari Jokinen, Jacob Stanleyyeah,
 Maintainer:          johnw@newartisans.com
-Build-Type:          Custom
+Build-Type:          Simple
 Cabal-Version:       >=1.10
 Category:            FFI
 
