--- a/gitlib-libgit2/gitlib-libgit2.cabal
+++ b/gitlib-libgit2/gitlib-libgit2.cabal
@@ -1,5 +1,5 @@
 Name:                gitlib-libgit2
-Version:       3.1.1
+Version:       3.1.1.1
 Synopsis:            Libgit2 backend for gitlib
 License-file:        LICENSE
 License:             MIT
@@ -23,9 +23,9 @@ Test-suite smoke
     Hs-source-dirs: test
     Build-depends: 
           base >=3
-        , gitlib             >= 3.1.1
+        , gitlib             >= 3.1.2.1
         , gitlib-test        >= 3.0.0
-        , gitlib-libgit2     >= 3.1.1
+        , gitlib-libgit2     >= 3.1.1.1
         , HUnit              >= 1.2.5
         , hspec              >= 1.4.4
         , hspec-expectations >= 0.3
@@ -39,7 +39,7 @@ Library
     build-depends:
           base                 >= 3 && < 5
         , gitlib               >= 3.1.2.1
-        , hlibgit2             >= 0.18.0.11
+        , hlibgit2             == 0.18.0.16.1
         , bytestring           >= 0.9.2.1
         , conduit              >= 1.1.0
         , conduit-combinators  >= 1
